fix: trigger container covering scene

--- a/styles.scss
+++ b/styles.scss
@@ -33,6 +33,13 @@ body {
   border-left: 1px solid #eee;
 }
 
-.trigger-label {
-  font-size: 14px;
+.trigger-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+
+  .trigger-label {
+    font-size: 14px;
+  }
 }
